# DarkVesselTracker

./: .gitignore  CMakeLists.txt  main.cpp  port_filter_script.py
DataSource/: CSVDataSource.cpp  CSVDataSource.h  IDataSource.h  PositionUpdate.h
IngestionLayer/: DarkEvent.h  IngestionLayer.h  Port.h  PortLoader.h  SpatialIndex.h  VesselState.h  VesselTracker.cpp  VesselTracker.h
IngestionLayer/EventQueue/: ConcurrentQueue.h
PortLoading/: PortLoader.h
Test/: DataSourceTest.cpp  test_data.csv
data/: port_dataset.csv  ports.csv
